--- a/WhatsYourOpinion/Pages/Index.cshtml
+++ b/WhatsYourOpinion/Pages/Index.cshtml
@@ -15,7 +15,7 @@
         {
             <div class="row">
                 <div class="col-md-4 offset-md-4 text-center">
-                    <a class="btn btn-link" href="./Answer?Topic=@topic.Title">@topic.Title</a>
+                        <a class="btn btn-link" href="./Answer?Topic=@topic.Name">@topic.Name</a>
                 </div>
             </div>
         }
