--- a/WhatsYourOpinion/Pages/_ViewImports.cshtml
+++ b/WhatsYourOpinion/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using WhatsYourOpinion
-@namespace WhatsYourOpinion.Pages
+﻿@using Data
+@namespace Data.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
